# MicronOpt-Python

./: .gitignore  README.md  micronopt.py  pyproject.toml  setup.py  test.py
test/: fbg_properties.json
