[project]
name = "micronopt-python"
dynamic = ["version"]
description = "A Python module for working with Micron Optics interrogators."
readme = "README.md"
authors = [
    { name = "Pete Bachant", email = "petebachant@gmail.com" }
]
requires-python = ">=2.7"
dependencies = [
    "numpy>=1.16.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["micronopt.py"]

[tool.hatch.version]
path = "micronopt.py"

[tool.ruff]
target-version = "py39"
line-length = 79
fix = true
